# codex-extra_memory

./: .dockerignore  .editorconfig  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  cliff.toml  deny.toml  release-plz.toml
.claude/: settings.json
.github/: CODEOWNERS  FUNDING.yml  deny.toml  dependabot.yml  dependency-review-config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  container.yml  dependabot-auto.yml  dependency-review.yml  publish-main.yml  release-plz.yml  release-stable.yml  scorecard.yml  security-nightly.yml  security.yml
crates/codex-extra-memory-cli/: CHANGELOG.md  Cargo.toml
crates/codex-extra-memory-cli/src/: main.rs
crates/codex-extra-memory-core/: CHANGELOG.md  Cargo.toml
crates/codex-extra-memory-core/src/: agents_sync.rs  autocapture.rs  commands.rs  config.rs  lib.rs  llm.rs  paths.rs  render.rs  scope.rs  service.rs  store.rs  types.rs  utils.rs
crates/codex-extra-memory-core/tests/: core_tests.rs
crates/codex-extra-memory-installer/: Cargo.toml
crates/codex-extra-memory-installer/src/: main.rs
crates/codex-extra-memory-mcp/: Cargo.toml
crates/codex-extra-memory-mcp/src/: main.rs
install/: install.sh  uninstall.sh
