[workspace]
members = [
  "crates/codex-extra-memory-core",
  "crates/codex-extra-memory-mcp",
  "crates/codex-extra-memory-cli",
  "crates/codex-extra-memory-installer",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Martin"]
rust-version = "1.85"
repository = "https://github.com/lammesen/codex-extra_memory"
homepage = "https://github.com/lammesen/codex-extra_memory"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
codex-extra-memory-core = { version = "0.1.1", path = "crates/codex-extra-memory-core" }
dirs = "6.0"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
rusqlite = { version = "0.33", features = ["bundled"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
toml_edit = "0.22"
url = "2.5"
uuid = { version = "1.16", features = ["v4", "serde"] }
mcpkit = "0.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Existing code exceptions
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
implicit_hasher = "allow"
missing_const_for_fn = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
needless_pass_by_ref_mut = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
redundant_clone = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
trim_split_whitespace = "allow"
