[package]
name = "codex-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "codex-memory"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
codex-extra-memory-core.workspace = true

[lints]
workspace = true
