[package]
name = "codex-extra-memory-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core library for codex-extra-memory persistence, sync, and compaction."
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
dirs.workspace = true
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
