[package]
name = "codex-extra-memory-installer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
toml_edit.workspace = true

[lints]
workspace = true
