[package]
name = "codex-extra-memory-installer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Installer and uninstaller for codex-extra-memory Codex integration."
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
toml_edit.workspace = true

[lints]
workspace = true
