[package]
name = "codex-extra-memory-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
mcpkit.workspace = true
serde_json.workspace = true
tokio.workspace = true
codex-extra-memory-core = { path = "../codex-extra-memory-core" }

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
