[package]
name = "codex-extra-memory-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MCP server binary for codex-extra-memory."
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
mcpkit.workspace = true
serde_json.workspace = true
tokio.workspace = true
codex-extra-memory-core.workspace = true

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
